--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
           <ul class="navbar-nav mr-auto" id="navBar">
             <form class="form-inline" id="menuForm">
 
-            <button class="btn btn-outline-success" type="button" id="topButton"><i class="fas fa-users-cog" id="mainIcon"></i><h6 id="menuItem">About</h6></button>
+            <button onclick="window.location.href = 'index.html';" class="btn btn-outline-success" type="button" id="topButton1"><i class="fas fa-users-cog" id="mainIcon"></i><h6 id="menuItem">About</h6></button>
 
-            <button class="btn btn-outline-success" type="button" id="topButton"><i class="fas fa-chart-line" id="mainIcon"></i><h6 id="menuItem">Analytics</h6></button>
+            <button onclick="window.location.href = 'analytics.html';" class="btn btn-outline-success" type="button" id="topButton2"><i class="fas fa-chart-line" id="mainIcon"></i><h6 id="menuItem">Analytics</h6></button>
 
-            <button class="btn btn-outline-success" type="button" id="topButton"><i class="fas fa-code" id="mainIcon"></i><h6 id="menuItem">Digital</h6></button>
+            <button onclick="window.location.href = 'digital.html';" class="btn btn-outline-success" type="button" id="topButton3"><i class="fas fa-code" id="mainIcon"></i><h6 id="menuItem">Digital</h6></button>
 
-            <button class="btn btn-outline-success" type="button" id="topButton"><i class="fas fa-laptop" id="mainIcon"></i><h6 id="menuItem">Electronics</h6></button>
+            <button onclick="window.location.href = 'electronics.html';" class="btn btn-outline-success" type="button" id="topButton4"><i class="fas fa-laptop" id="mainIcon"></i><h6 id="menuItem">Electronics</h6></button>
 
-            <button class="btn btn-outline-success" type="button" id="topButton"><i class="fas fa-chalkboard-teacher" id="mainIcon"></i><h6 id="menuItem">Forme-Pro</h6></button>
+            <button onclick="window.location.href = 'forme-pro.html';" class="btn btn-outline-success" type="button" id="topButton5"><i class="fas fa-chalkboard-teacher" id="mainIcon"></i><h6 id="menuItem">Forme-Pro</h6></button>
             </form>
           </ul>
             <form class="form-inline my-2 my-lg-0" id="searchBar">
