--- a/electronics.html
+++ b/electronics.html
@@ -21,36 +21,36 @@
 </head>
 
 <!-- Main Body Starts Here -->
-<body>
-  <div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="menuBar">
-      <a class="navbar-brand" href="#"><img src="images/sillonblue1.png" id="mainLogo"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <body>
+    <div>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light" id="menuBar">
+        <a class="navbar-brand" href="#"><img src="images/sillonblue1.png" id="mainLogo"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="mainNav">
-        <ul class="navbar-nav mr-auto" id="navBar">
-          <form class="form-inline" id="menuForm">
+        <div class="collapse navbar-collapse" id="mainNav">
+          <ul class="navbar-nav mr-auto" id="navBar">
+            <form class="form-inline" id="menuForm">
 
-          <button class="btn btn-outline-success" type="button" id="topButton"><i class="fas fa-users-cog" id="mainIcon"></i><h6 id="menuItem">About</h6></button>
+            <button onclick="window.location.href = 'index.html';" class="btn btn-outline-success" type="button" id="topButton1"><i class="fas fa-users-cog" id="mainIcon"></i><h6 id="menuItem">About</h6></button>
 
-          <button class="btn btn-outline-success" type="button" id="topButton"><i class="fas fa-chart-line" id="mainIcon"></i><h6 id="menuItem">Analytics</h6></button>
+            <button onclick="window.location.href = 'analytics.html';" class="btn btn-outline-success" type="button" id="topButton2"><i class="fas fa-chart-line" id="mainIcon"></i><h6 id="menuItem">Analytics</h6></button>
 
-          <button class="btn btn-outline-success" type="button" id="topButton"><i class="fas fa-code" id="mainIcon"></i><h6 id="menuItem">Digital</h6></button>
+            <button onclick="window.location.href = 'digital.html';" class="btn btn-outline-success" type="button" id="topButton3"><i class="fas fa-code" id="mainIcon"></i><h6 id="menuItem">Digital</h6></button>
 
-          <button class="btn btn-outline-success" type="button" id="topButton"><i class="fas fa-laptop" id="mainIcon"></i><h6 id="menuItem">Electronics</h6></button>
+            <button onclick="window.location.href = 'electronics.html';" class="btn btn-outline-success" type="button" id="topButton4"><i class="fas fa-laptop" id="mainIcon"></i><h6 id="menuItem">Electronics</h6></button>
 
-          <button class="btn btn-outline-success" type="button" id="topButton"><i class="fas fa-chalkboard-teacher" id="mainIcon"></i><h6 id="menuItem">Forme-Pro</h6></button>
-          </form>
-        </ul>
-          <form class="form-inline my-2 my-lg-0" id="searchBar">
-            <input type="text" placeholder="Search.." name="search" id="searchInput">
-            <button type="submit" id="searchLoop"><i class="fas fa-search" id="searchIcon"></i></button>
-          </form>
-      </div>
-    </nav>
-  </div>
+            <button onclick="window.location.href = 'forme-pro.html';" class="btn btn-outline-success" type="button" id="topButton5"><i class="fas fa-chalkboard-teacher" id="mainIcon"></i><h6 id="menuItem">Forme-Pro</h6></button>
+            </form>
+          </ul>
+            <form class="form-inline my-2 my-lg-0" id="searchBar">
+              <input type="text" placeholder="Search.." name="search" id="searchInput">
+              <button type="submit" id="searchLoop"><i class="fas fa-search" id="searchIcon"></i></button>
+            </form>
+        </div>
+      </nav>
+    </div>
 
   <!-- Header Text Section -->
   <div class="container-fluid" id="headerDigital">
