--- a/forme-pro.html
+++ b/forme-pro.html
@@ -5,14 +5,70 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- JavaScript File -->
+    <script type="text/javascript" src="js/scripts.js"></script>
+    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Hello, world!</title>
+    <!-- Google Fonts + Font Awesome -->
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
+    <title>SillonBlue Technologies</title>
   </head>
-  <body>
-    <h1>Hello, world!</h1>
+
+<!-- Main Body Starts Here -->
+<body>
+  <div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="menuBar">
+      <a class="navbar-brand" href="#"><img src="images/sillonblue1.png" id="mainLogo"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav mr-auto" id="navBar">
+          <form class="form-inline" id="menuForm">
+
+          <button onclick="window.location.href = 'index.html';" class="btn btn-outline-success" type="button" id="topButton1"><i class="fas fa-users-cog" id="mainIcon"></i><h6 id="menuItem">About</h6></button>
+
+          <button onclick="window.location.href = 'analytics.html';" class="btn btn-outline-success" type="button" id="topButton2"><i class="fas fa-chart-line" id="mainIcon"></i><h6 id="menuItem">Analytics</h6></button>
+
+          <button onclick="window.location.href = 'digital.html';" class="btn btn-outline-success" type="button" id="topButton3"><i class="fas fa-code" id="mainIcon"></i><h6 id="menuItem">Digital</h6></button>
+
+          <button onclick="window.location.href = 'electronics.html';" class="btn btn-outline-success" type="button" id="topButton4"><i class="fas fa-laptop" id="mainIcon"></i><h6 id="menuItem">Electronics</h6></button>
+
+          <button onclick="window.location.href = 'forme-pro.html';" class="btn btn-outline-success" type="button" id="topButton5"><i class="fas fa-chalkboard-teacher" id="mainIcon"></i><h6 id="menuItem">Forme-Pro</h6></button>
+          </form>
+        </ul>
+          <form class="form-inline my-2 my-lg-0" id="searchBar">
+            <input type="text" placeholder="Search.." name="search" id="searchInput">
+            <button type="submit" id="searchLoop"><i class="fas fa-search" id="searchIcon"></i></button>
+          </form>
+      </div>
+    </nav>
+  </div>
+
+  <!-- Header Text Section -->
+
+  <div class="container" id="headerAnalytics">
+    <div class="row">
+      <div class="col-sm-6" id="headerTextAnalytics">
+        <h1>Reimaginez l'Intelligence Statistique</h1>
+        <br>
+        <h5>Prenez des decisions vous basant sur des donnees reelles que sur instinct</h5>
+      </div>
+
+      <div class="col-sm-6" id="headerChart1">
+        <!-- <div id="chartContainer" style="height: 300px; width: 100%;"></div>-->
+        <img src="images/main/predictive.png" id="headerPC">
+      </div>
+    </div>
+  </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
