--- a/forme-pro.html
+++ b/forme-pro.html
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
     <title>SillonBlue Technologies</title>
+    <link rel="icon" type="image/png" href="images/sillonblue1.png">
   </head>
 
 <!-- Main Body Starts Here -->
