linked main logo

--- a/analytics.html
+++ b/analytics.html
@@ -24,7 +24,7 @@
   <body>
     <div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light" id="menuBar">
-        <a class="navbar-brand" href="#"><img src="images/sillonblue1.png" id="mainLogo"></a>
+        <a class="navbar-brand" href="index.html"><img src="images/sillonblue1.png" id="mainLogo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
